fix prevent tooltips to overlap

--- a/css/modules/tooltips.autoprefixed.css
+++ b/css/modules/tooltips.autoprefixed.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+[data-effeckt-tooltip-text]::after {
+  z-index: 2;
+}
+
 .effeckt-tooltip[data-effeckt-tooltip-text][data-effeckt-tooltip-position-top]::before,
 .effeckt-tooltip[data-effeckt-tooltip-text][data-effeckt-tooltip-position-top]::after {
   opacity: 0;
